2015-03-19  Brady Eidson  <beidson@apple.com>

        Part of content extensions should apply css selectors
        https://bugs.webkit.org/show_bug.cgi?id=142604

        Reviewed by Alex Christensen.

        * TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
        (WebCore::ContentExtensions::operator<<):

2015-03-19  Brent Fulgham  <bfulgham@apple.com>

        [Win] Activate tests on EWS
        https://bugs.webkit.org/show_bug.cgi?id=142850

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/common/config/ews.json: Add me as
        the EWS bot watcher, and activate tests.

2015-03-19  Csaba Osztrogonác  <ossy@webkit.org>

        [GTK] Fix inspector userinterface related incremental build issue
        https://bugs.webkit.org/show_bug.cgi?id=142849

        Reviewed by Carlos Garcia Campos.

        * Scripts/webkitdirs.pm:
        (shouldRemoveCMakeCache):

2015-03-18  Alex Christensen  <achristensen@webkit.org>

        [ContentExtensions] Prepare for compiling stylesheets of selectors to be used on every page.
        https://bugs.webkit.org/show_bug.cgi?id=142799

        Reviewed by Brady Eidson.

        * TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
        (TestWebKitAPI::testPattern):
        (TestWebKitAPI::TEST_F):
        Start testing regex failures.

2015-03-18  Dhi Aurrahman  <diorahman@rockybars.com>

        Fix StringView typos after r181525 and r181558
        https://bugs.webkit.org/show_bug.cgi?id=142772

        Reviewed by Darin Adler.

        Add some tests in [1] to cover the StringView::startsWith, 
        StringView::startsWithIgnoringASCIICase, StringView::endsWith and 
        StringView::endsWithIgnoringASCIICase implementations.

        * TestWebKitAPI/Tests/WTF/StringView.cpp:
        (TestWebKitAPI::TEST):

2015-03-18  Dana Burkart  <dburkart@apple.com>

        Remove extraneous import to fix the build.

        Unreviewed.

        * Scripts/webkitpy/port/driver.py:
